form cross validator

--- a/src/app/dynamic-form-builder/field-builder/field-builder.component.html
+++ b/src/app/dynamic-form-builder/field-builder/field-builder.component.html
@@ -1,14 +1,14 @@
-<div class="form-group row" [formGroup]="form">
+<div [hidden]="isHidden$ | async" class="form-group row" [formGroup]="form">
     <label class="col-md-3 form-control-label" [attr.for]="field.label">
       {{field?.label}}
       <strong class="text-danger" *ngIf="showRequiredSign">*</strong>
     </label>
     <div class="col-md-9" [ngSwitch]="field.type">
-      <textbox *ngSwitchCase="'text'" [field]="field" [form]="form"></textbox>
-      <dropdown *ngSwitchCase="'dropdown'" [field]="field" [form]="form"></dropdown>
-      <checkbox *ngSwitchCase="'checkbox'" [field]="field" [form]="form"></checkbox>
-      <radio *ngSwitchCase="'radio'" [field]="field" [form]="form"></radio>
-      <file *ngSwitchCase="'file'" [field]="field" [form]="form"></file>
+      <textbox [disabled]="isDisabled$ | async" *ngSwitchCase="'text'" [field]="field" [form]="form"></textbox>
+      <dropdown [disabled]="isDisabled$ | async" *ngSwitchCase="'dropdown'" [field]="field" [form]="form"></dropdown>
+      <checkbox [disabled]="isDisabled$ | async" *ngSwitchCase="'checkbox'" [field]="field" [form]="form"></checkbox>
+      <radio [disabled]="isDisabled$ | async" *ngSwitchCase="'radio'" [field]="field" [form]="form"></radio>
+      <file [disabled]="isDisabled$ | async" *ngSwitchCase="'file'" [field]="field" [form]="form"></file>
       <div class="alert alert-danger my-1 p-2 fadeInDown animated" *ngIf="!isValid && isDirty">
           <div *ngIf="fieldErrors['required']">{{errorMessages['required']}}</div>
           <div *ngIf="fieldErrors['minlength']">{{errorMessages['minLength']}}  </div>
